--- a/leaderboard.html
+++ b/leaderboard.html
@@ -148,36 +148,70 @@
     </div>
 
     <script type="module">
-        import { subscribeToGlobalLeaderboard } from './js/leaderboard.js';
+        import { getGlobalLeaderboard, getUniqueFilterValues } from './js/leaderboard.js';
         // Note: getUniqueFilterValues might not exist, I'll mock it or check logic
 
         let currentTab = 'Global';
 
-        // Filter Inputs
-        const filterContainer = document.getElementById('filter-container');
-        // Let's replace the select with a more versatile input for Colleges/Cities
-        filterContainer.innerHTML = `
-            <input type="text" id="filter-input" placeholder="Enter Name (e.g. Harvard)" 
-                style="padding: 0.8rem 1.5rem; border-radius: 4px; background: rgba(0,0,0,0.5); color: #fff; border: 1px solid var(--surface-border); min-width: 250px; text-align: center;">
-            <button id="filter-btn" class="btn btn-primary" style="padding: 0.8rem;">GO</button>
-        `;
+        // Mock data for filters since we might not have a distinct query ready
+        const MOCK_COLLEGES = ['Harvard', 'MIT', 'Stanford', 'Unknown', 'Yale', 'Princeton'];
+        const MOCK_CITIES = ['New York', 'San Francisco', 'London', 'Boston', 'Chicago'];
 
-        let activeUnsubscribe = null;
+        // Initial Load
+        loadLeaderboard('Global');
 
-        // LOAD LEADERBOARD (Live)
-        function loadLeaderboard(type, filterVal = null) {
-            const container = document.getElementById('leaderboard-container');
-            container.innerHTML = '<div style="text-align: center; padding: 4rem;">Scanning network...</div>';
+        // Tab Switching
+        document.querySelectorAll('.tab-btn').forEach(btn => {
+            btn.addEventListener('click', (e) => {
+                // UI Toggle
+                document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
+                e.target.classList.add('active');
 
-            if (activeUnsubscribe) activeUnsubscribe(); // Unsub previous
+                currentTab = e.target.dataset.tab;
+                const filterCont = document.getElementById('filter-container');
+                const filterSel = document.getElementById('filter-select');
 
-            // If Filter required but empty
-            if ((type === 'College' || type === 'City') && !filterVal) {
-                container.innerHTML = `<div style="text-align: center; padding: 3rem; color: var(--text-secondary);">Please enter a ${type} name above to view rankings.</div>`;
-                return;
+                if (currentTab === 'Global') {
+                    filterCont.classList.add('hidden');
+                    loadLeaderboard('Global');
+                } else {
+                    filterCont.classList.remove('hidden');
+                    // Populate filter options
+                    if (currentTab === 'College') populateFilters(MOCK_COLLEGES);
+                    if (currentTab === 'City') populateFilters(MOCK_CITIES);
+
+                    // Reset View until filter selected? Or show top indiscriminately?
+                    // Let's clear and ask for selection
+                    document.getElementById('leaderboard-container').innerHTML = `<div style="text-align: center; padding: 3rem; color: var(--text-secondary);">Select a ${currentTab} to view rankings.</div>`;
+                }
+            });
+        });
+
+        document.getElementById('filter-select').addEventListener('change', (e) => {
+            if (e.target.value) {
+                loadLeaderboard(currentTab, e.target.value);
             }
+        });
 
-            activeUnsubscribe = subscribeToGlobalLeaderboard(type, filterVal, 'totalScore', (users) => {
+        function populateFilters(options) {
+            const sel = document.getElementById('filter-select');
+            sel.innerHTML = '<option value="">Select...</option>';
+            options.forEach(o => {
+                const opt = document.createElement('option');
+                opt.value = o;
+                opt.textContent = o;
+                sel.appendChild(opt);
+            });
+        }
+
+        async function loadLeaderboard(type, filterVal = null) {
+            const container = document.getElementById('leaderboard-container');
+            container.innerHTML = '<div style="text-align: center; padding: 4rem;">Decrypting...</div>';
+
+            try {
+                // Call the existing function from Step 642
+                const users = await getGlobalLeaderboard(type, filterVal, 'totalScore');
+
                 if (users.length === 0) {
                     container.innerHTML = '<div style="text-align: center; padding: 4rem; color: var(--text-secondary);">No operatives found in this sector.</div>';
                     return;
@@ -185,7 +219,8 @@
 
                 container.innerHTML = '';
                 users.forEach((u, index) => {
-                    const rank = index + 1;
+                    const rank = index + 1; // Rank is just index + 1 for the fetched list
+
                     let rankClass = '';
                     if (rank === 1) rankClass = 'rank-1';
                     else if (rank === 2) rankClass = 'rank-2';
@@ -205,53 +240,20 @@
                                 <div style="font-size: 0.8rem; color: var(--text-secondary); text-transform: uppercase;">
                                     ${u.dominantType || 'Unknown Type'}
                                 </div>
-                                <div style="display: flex; gap: 0.5rem; font-size: 0.8rem; color: #666;">
-                                    <span>${u.college || ''}</span>
-                                    <span>${u.city || ''}</span>
+                                <div style="font-size: 0.8rem; color: #666;">
+                                    ${u.city || u.college || 'Unknown Location'}
                                 </div>
                             </div>
                         </div>
                     `;
                     container.appendChild(div);
                 });
-            });
-        }
 
-        // Initial Load
-        loadLeaderboard('Global');
-
-        // Tab Logic
-        document.querySelectorAll('.tab-btn').forEach(btn => {
-            btn.addEventListener('click', (e) => {
-                document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
-                e.target.classList.add('active');
-                currentTab = e.target.dataset.tab;
-
-                if (currentTab === 'Global') {
-                    filterContainer.classList.add('hidden');
-                    loadLeaderboard('Global');
-                } else {
-                    filterContainer.classList.remove('hidden');
-                    // Reset View
-                    document.getElementById('filter-input').placeholder = `Enter ${currentTab} Name...`;
-                    document.getElementById('filter-input').value = '';
-                    loadLeaderboard(currentTab, null); // Will prompt for input
-                }
-            });
-        });
-
-        // Filter Action
-        document.getElementById('filter-btn').addEventListener('click', () => {
-            const val = document.getElementById('filter-input').value.trim();
-            if (val) loadLeaderboard(currentTab, val);
-        });
-
-        // Enter Key Support
-        document.getElementById('filter-input').addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') {
-                document.getElementById('filter-btn').click();
+            } catch (e) {
+                console.error(e);
+                container.innerHTML = '<div style="text-align: center; padding: 2rem; color: var(--danger-color);">Error retrieving data. Secure line failed.</div>';
             }
-        });
+        }
     </script>
 </body>
 
